[gd_scene load_steps=4 format=3 uid="uid://bo17vlulyc6s0"]

[ext_resource type="Script" uid="uid://jn5sby6rxcae" path="res://Scenes/buttons.gd" id="1_hawxw"]
[ext_resource type="PackedScene" uid="uid://bobcoqynup0kj" path="res://Scenes/Button.tscn" id="2_14t0v"]
[ext_resource type="PackedScene" uid="uid://cyt15hhx7bdrn" path="res://Scenes/Sections.tscn" id="3_b0kp0"]

[node name="Buttons" type="Node"]
script = ExtResource("1_hawxw")

[node name="Button0" parent="." instance=ExtResource("2_14t0v")]
transform = Transform3D(2, 0, 0, 0, 0.8134732, -1.8270912, 0, 1.827091, 0.81347334, -5, 2.7, -0.7)

[node name="Button1" parent="." instance=ExtResource("2_14t0v")]
transform = Transform3D(1.9951282, -0.13951296, 0, 0.047716238, 0.6823741, -1.8793851, 0.13109928, 1.8748075, 0.68404025, -2.2, 2.7, -0.5)

[node name="Button2" parent="." instance=ExtResource("2_14t0v")]
transform = Transform3D(1.9951282, 0.13951294, 0, -0.047716238, 0.68237406, -1.8793852, -0.13109928, 1.8748072, 0.6840403, 2.2, 2.7, -0.5)

[node name="Button3" parent="." instance=ExtResource("2_14t0v")]
transform = Transform3D(2, 0, 0, 0, 0.8134732, -1.827091, 0, 1.827091, 0.8134732, 5, 2.7, -0.7)

[node name="Sections" parent="." instance=ExtResource("3_b0kp0")]

[connection signal="mouse_entered_section" from="Sections" to="." method="_on_mouse_entered_section"]
[connection signal="mouse_exited_section" from="Sections" to="." method="_on_mouse_exited_section"]
